--- a/edu.cmu.ds.lab1/src/processmanager/.gitignore
+++ b/edu.cmu.ds.lab1/src/processmanager/.gitignore
@@ -1,3 +1,7 @@
 /MigratableProcess.class
 /ProcessManager.class
 /ContactServer.class
+/ProcessInfo.class
+/ProcessStatus.class
+/Tthread.class
+/test.class
