--- a/edu.cmu.ds.lab1/src/network/.gitignore
+++ b/edu.cmu.ds.lab1/src/network/.gitignore
@@ -5,3 +5,7 @@
 /ClientInfo.class
 /StatusMessages.class
 /DecodeMessage.class
+/ClientsideReceiver.class
+/TestClient.class
+/TestObject.class
+/TestServer.class
